...
        "Twi" to "TW",
        "Uighur" to "UG",
        "Ukrainian" to "UK",
        "Urdu" to "UR",
        "Uzbek" to "UZ",
        "Venda" to "VE",
        "Vietnamese" to "VI",
        "Volapük" to "VO",
        "Walloon" to "WA",
        "Welsh" to "CY",
        "Western Frisian" to "FY",
        "Wolof" to "WO",
        "Xhosa" to "XH",
...
